--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,7 +1,7 @@
 pipeline {
     agent any
     tools {
-        maven 'my_maven'
+        maven 'my maven'
     }
     stages {
         stage('clone sources') {
